--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           name: moergo-glove80-zmk-dev
           skipPush: true
-      - name: Build Go60 combined firmware
+      - name: Build Go60 firmware
         run: nix-build config -o combined
       - name: Copy result out of nix store
         run: cp combined/go60.uf2 go60.uf2
@@ -30,3 +30,31 @@ jobs:
         with:
           name: go60.zip
           path: go60.uf2
+
+  build-studio:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          submodules: recursive
+      - uses: actions/checkout@v4
+        with:
+          repository: moergo-sc/zmk
+          ref: main
+          path: src
+      - uses: cachix/install-nix-action@v25
+        with:
+          nix_path: nixpkgs=channel:nixos-22.05
+      - uses: cachix/cachix-action@v14
+        with:
+          name: moergo-glove80-zmk-dev
+          skipPush: true
+      - name: Build Go60 Studio firmware
+        run: nix-build config/studio.nix -o combined
+      - name: Copy result out of nix store
+        run: cp combined/go60.uf2 go60-studio.uf2
+      - name: Upload result
+        uses: actions/upload-artifact@v4
+        with:
+          name: go60-studio.zip
+          path: go60-studio.uf2
