--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
           path: src
       - uses: cachix/install-nix-action@v25
         with:
-          nix_path: nixpkgs=channel:nixos-25.05
+          nix_path: nixpkgs=https://releases.nixos.org/nixpkgs/nixpkgs-25.05pre716127.566e53c2ad75/nixexprs.tar.xz
       - uses: cachix/cachix-action@v14
         with:
           name: moergo-glove80-zmk-dev
@@ -44,7 +44,7 @@ jobs:
           path: src
       - uses: cachix/install-nix-action@v25
         with:
-          nix_path: nixpkgs=channel:nixos-25.05
+          nix_path: nixpkgs=https://releases.nixos.org/nixpkgs/nixpkgs-25.05pre716127.566e53c2ad75/nixexprs.tar.xz
       - uses: cachix/cachix-action@v14
         with:
           name: moergo-glove80-zmk-dev
