--- a/config/go60.conf
+++ b/config/go60.conf
@@ -1,4 +1,4 @@
 CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=216
 CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=0
 CONFIG_ZMK_HID_INDICATORS=y
-CONFIG_ZMK_STUDIO=y
+# CONFIG_ZMK_STUDIO=y
